--- a/Text/Arbeit/Arbeit_Main.tex
+++ b/Text/Arbeit/Arbeit_Main.tex
@@ -151,81 +151,9 @@ citecolor=MidnightBlue }
 \tableofcontents
 \setcounter{page}{1}
 
-\chapter{Grundlagen von Predictive Analytics}
+\input{Inhalt/Einleitung}
 
-Textkram Textkram Textkram Textkram Textkram Textkram Textkram \\ \\
-Mehr Textkram Mehr Textkram Mehr Textkram Mehr Textkram Mehr Textkram Mehr
-Textkram \\ \\
-Abkürzung (Akronym) \gls{MS} und Glossareintrag \gls{glos:AntwD}. \\ \\
-Zitieren auf Deutsch \cite{ART12d} und Englisch \cite{ART12e}. \\ \\
-Hier ein Link \url{www.kram.de}.
-
-\cite{Thapa_Parycek} und \cite{Mergel}
-
-\section{Motivation - Die Schwierigkeit von Vorhersagen}
-
-\section{Begriffsdefinition und -Abgrenzung}
-
-\section{Bestandteile von Predictive Analytics}
-
-\subsection{CRISP-DM Vorgehensmodell}
-
-\subsection{Daten}
-
-\subsubsection{Information Management (Data Warehouse)}
-
-\subsubsection{Datenabhängige Ziele}
-
-\paragraph{\ldots}
-
-\paragraph{Beschreibung der Daten}
-
-\paragraph{Klassifikation}
-
-\paragraph{Zeitreihenanalyse}
-
-\subsection{Methoden}
-
-\subsubsection{Die Großen Drei}
-
-\paragraph{Regression}
-
-\paragraph{Entscheidungsbäume}
-
-\paragraph{Neuronale Netze}
-
-\subsubsection{Zeitreihenanalyse}
-
-\subsubsection{\ldots}
-
-\subsection{Werkzeuge}
-
-\subsection{(Kreative) Freiheitsgrade bei der Implementierung eines
-  Vorhersagemodells}
-
-\section{Anwendungsbeispiele}
-
-\subsection{Allgemeine Anwendungsfelder (siehe SAP Artikel)}
-
-\subsection{\ldots}
-
-\section{Allgemeine Risiken bei der Nutzung von Predictive Analytics}
-
-\subsection{Risiko der Unverhältnismäßigkeit}
-
-\subsection{Risiken bei der Datenerhebung}
-
-\subsubsection{\ldots}
-
-\subsection{Risiken bei der Interpretation der Daten}
-
-\subsection{Risiken bei der Interpretation der Ergebnisse}
-
-\subsubsection{Prognose verändert das Verhalten des Systems 
-%  (``Selffulfilling Prophecy'')}
-  (\glqq{Selffulfilling} Prophecy\grqq})
-
-\subsubsection{Ignorieren der Unsicherheiten bei der Prognose}
+\input{Inhalt/Grundlagen_PA}
 
 \chapter{Predictive Analytics im öffentlichen Sektor}
 
