--- a/Text/Arbeit/Glossar/Arbeit_Glossar.tex
+++ b/Text/Arbeit/Glossar/Arbeit_Glossar.tex
@@ -29,4 +29,8 @@
 \newglossaryentry{glos:AntwD}{name=Antwortdatei, description={Informationen zum
 Installieren einer Anwendung oder des Betriebssystems.}}
 
-
+\newglossaryentry
+{glos:Predictive_Analytics}{name=Predictive Analytics, description=
+{Die Analyse von Daten mit Hilfe mathematischer und statistischer Methoden.
+Das Ziel von Predictive Analytics ist die Erstellung von Prognosen zur
+Unterstützung der Entscheidungsfindung}}
