--- a/Text/Arbeit/Bibliographie/Bibli.bib
+++ b/Text/Arbeit/Bibliographie/Bibli.bib
@@ -1,25 +1,18 @@
-@article{ART12e,
-  author  = {Shen Lin and Brian W. Kernighan},
-  title   = {An Effective Heuristic Algorithm for the Travelling-Salesman Problem},
-  journal = {Operations Research},
-  volume = {Vol. 8(2)},
-  month = {June},
-  year    = {2012},
-  language = {english}
-}
-
-@article{ART12d,
-  author  = {Shen Lin and Brian W. Kernighan},
-  title   = {An Effective Heuristic Algorithm for the Travelling-Salesman Problem},
-  journal = {Operations Research},
-  volume = {Vol. 8(2)},
-  month = {June},
-  year    = {2012},
-  language = {ngerman}
+@book { Bijma,
+author = "Fetsje Bijma and Marianne Jonker and Aad van der Vaart and Reinie Erné",
+title = "An Introduction to Mathematical Statistics",
+year = "2017",
+publisher = "Amsterdam University Press",
+IGNORE_address = "Amsterdam",
+isbn = "978-90-485-3611-5",
+IGNORE_doi = "https://doi.org/10.1515/9789048536115",
+IGNORE_url = "https://www.degruyter.com/view/title/543210",
+language = {english}
 }
 
 @inbook{Thapa_Parycek,
 author = {Thapa, Basanta and Parycek, Peter},
+publisher = {Kompetenzzentrum Öffentliche IT Berlin},
 year = {2018},
 month = {06},
 pages = {40-75},
@@ -30,10 +23,45 @@ language = {ngerman}
 
 @inbook{Mergel,
 author = {Mergel, Ines},
+publisher = {Kompetenzzentrum Öffentliche IT Berlin},
 year = {2018},
 month = {06},
 pages = {76-96},
 title = {Big Data und Data-Science-Ansätze in der öffentlichen Verwaltung},
 isbn = {978-3-9818892-5-3},
 language = {ngerman}
+}
+
+@article{Mauerer,
+author = {Mauerer, Jürgen},
+title = {Predictive Analytics 2018: Datenbasierte Entscheidungen lösen
+  das Bauchgefühl ab},
+journal = {Computerwoche},
+volume = {30},
+year = {2018},
+issn = {0170-5121},
+language = {ngerman}
+}
+
+@book{OECD,
+author = {OECD},
+title = {Advanced Analytics for Better Tax Administration},
+publisher = {OECD Publishing},
+year = {2016},
+IGNORE_pages = 60,
+IGNORE_url = 
+  "https://www.oecd-ilibrary.org/content/publication/9789264256453-en",
+IGNORE_doi = "https://doi.org/https://doi.org/10.1787/9789264256453-en",
+doi = {10.1787/9789264256453-en},
+language = {english}
+}
+
+@book{Dinov,
+author = {Dinov, Ivo},
+title = {Data Science and Predictive Analytics - 
+  Biomedical and Health Applications using R},
+publisher = {Springer},
+year = {2018},
+isbn = {978-3-319-72347-1},
+language = {english}
 }
