--- a/Text/Arbeit/Inhalt/Einleitung.tex
+++ b/Text/Arbeit/Inhalt/Einleitung.tex
@@ -7,7 +7,7 @@ Anwendungsgebiete in anderen Staaten betrachtet werden. \\ \\
 Dieser einleitende Teil soll zunächst das Problem der Schwierigkeit von
 Prognosen untersuchen und damit eine Motivation für die Anwendung von Predictive
 Analytics liefern. \\ \\
-In Teil~\ref{part:Grundlagen_PA} werden die Grundlagen von Predictive Analytics
-vorgestellt. Dabei werden auch die allgemeinen Risiken bei der Anwendung von
-Predictive Analytics diskutiert. \\ \\
+In Teil~\ref{part:Konzepte_PA} werden die wichtigsten Konzepte von Predictive
+Analytics vorgestellt. Dabei werden auch die allgemeinen Risiken bei der
+Anwendung von Predictive Analytics diskutiert. \\ \\
 \todo{weitere Teile}
