--- a/Text/Arbeit/Inhalt/Konzepte_PA.tex
+++ b/Text/Arbeit/Inhalt/Konzepte_PA.tex
@@ -1,14 +1,16 @@
-\chapter{Grundlagen von Predictive Analytics}
-\label{part:Grundlagen_PA}
+\chapter{Konzepte von Predictive Analytics}
+\label{part:Konzepte_PA}
 
 Textkram Textkram Textkram Textkram Textkram Textkram Textkram \\ \\
 Mehr Textkram Mehr Textkram Mehr Textkram Mehr Textkram Mehr Textkram Mehr
 Textkram \\ \\
 Abkürzung (Akronym) \gls{MS} und Glossareintrag \gls{glos:AntwD}. \\ \\
-Zitieren auf Deutsch \cite{ART12d} und Englisch \cite{ART12e}. \\ \\
+%Zitieren auf Deutsch \cite{ART12d} und Englisch \cite{ART12e}. \\ \\
 Hier ein Link \url{www.kram.de}.
 
 \cite{Thapa_Parycek} und \cite{Mergel}
+
+\cite{Bijma}, ...
 
 \section{Begriffsdefinition und -Abgrenzung}
 
