Mehr Literatur zugefügt

--- a/Text/Arbeit/Arbeit_Main.tex
+++ b/Text/Arbeit/Arbeit_Main.tex
@@ -151,13 +151,28 @@ citecolor=MidnightBlue }
 \tableofcontents
 \setcounter{page}{1}
 
+\chapter{TEST}
+
+Textkram Textkram Textkram Textkram Textkram Textkram Textkram \\ \\
+Mehr Textkram Mehr Textkram Mehr Textkram Mehr Textkram Mehr Textkram Mehr
+Textkram \\ \\
+Abkürzung (Akronym) \gls{MS} und Glossareintrag \gls{glos:AntwD}. \\ \\
+%Zitieren auf Deutsch \cite{ART12d} und Englisch \cite{ART12e}. \\ \\
+Hier ein Link \url{www.kram.de}.
+
+\cite{Thapa_Parycek} und \cite{Mergel}
+
+\cite{Bijma}, ...
+
+\cite{Mauerer}, \cite{OECD}, \cite{Dinov}, \cite{Runkler}, \cite{McCarthy}
+
+\cite{Crossman}, \cite{Bowles}
+
 \input{Inhalt/Einleitung}
 
 \input{Inhalt/Konzepte_PA}
 
 \chapter{Predictive Analytics im öffentlichen Sektor}
-
-\cite{Mauerer}, \cite{OECD}, \cite{Dinov}, 
 
 \section{Übersicht}
 
