--- a/Text/Arbeit/Bibliographie/Bibli.bib
+++ b/Text/Arbeit/Bibliographie/Bibli.bib
@@ -65,3 +65,42 @@ year = {2018},
 isbn = {978-3-319-72347-1},
 language = {english}
 }
+
+@book{McCarthy,
+author = {McCarthy, Richard and McCarthy, Mary and Ceccucci, Wendy and
+  Halawi, Leila},
+title = {Applying Predictive Analytics - Finding Value in Data},
+publisher = {Springer},
+year = {2019},
+isbn = {978-3-030-14038-0},
+language = {english}
+}
+
+@book{Runkler,
+author = {Runkler, Thomas},
+title = {Data Analytics - Models and Algorithms for Intelligent Data Analysis},
+publisher = {Springer},
+year = {2020},
+isbn = {978-3-658-29779-4},
+language = {english}
+}
+
+@misc{Crossman,
+author = {Crossman, Ashley},
+title = {Definition of Self-Fulfilling Prophecy in Sociology},
+howpublished = {ThoughtCo},
+year = {2020},
+note = {Accessed: 23.06.2020},
+url = {https://www.thoughtco.com/self-fulfilling-prophecy-3026577},
+language = {english}
+}
+
+@book{Bowles,
+author = {Bowles, Michael},
+title = {Machine Learning in Python -
+Essential Techniques for Predictive Analysis},
+publisher = {Wiley},
+year = {2015},
+isbn = {978-1-118-96175-9},
+language = {english}
+}
