--- a/Text/Arbeit/Inhalt/Konzepte_PA.tex
+++ b/Text/Arbeit/Inhalt/Konzepte_PA.tex
@@ -1,17 +1,6 @@
 \chapter{Konzepte von Predictive Analytics}
 \label{part:Konzepte_PA}
 
-Textkram Textkram Textkram Textkram Textkram Textkram Textkram \\ \\
-Mehr Textkram Mehr Textkram Mehr Textkram Mehr Textkram Mehr Textkram Mehr
-Textkram \\ \\
-Abkürzung (Akronym) \gls{MS} und Glossareintrag \gls{glos:AntwD}. \\ \\
-%Zitieren auf Deutsch \cite{ART12d} und Englisch \cite{ART12e}. \\ \\
-Hier ein Link \url{www.kram.de}.
-
-\cite{Thapa_Parycek} und \cite{Mergel}
-
-\cite{Bijma}, ...
-
 \section{Begriffsdefinition und -Abgrenzung}
 
 \section{Bestandteile von Predictive Analytics}
@@ -61,14 +50,14 @@ Hier ein Link \url{www.kram.de}.
 
 Es exisitieren Risiken, die dazu führen können, dass die Ziele einer
 Datenanalyse nicht oder nicht in vollem Umfang erreicht werden können.
-Im Folgenden werden einige dieser Risiken erläutert.
+Im folgenden Text werden einige dieser Risiken erläutert.
 
 \subsection{Risiko der Unverhältnismäßigkeit}
 
 Die Anwendung von Predictive Analytics ist mit einem hohen Aufwand verbunden.
 Dabei spielen die Kosten für die Datenerhebung eine wesentliche Rolle.
 Zusätzlich werden für die Datenanalyse Kenntnisse aus verschiedenen
-Fachrichtungen benötigt. So sind einerseits anwendungsspezifische Kenntnisse,
+Fachrichtungen benötigt. So sind einerseits anwendungsspezifische Kenntnisse
 zur Interpretation der Daten und der Ergebnisse wünschenswert. Andererseits
 werden zur Durchführung der Datenanalyse Kenntnisse in Mathematik, Statistik und
 Informatik benötigt. \\ \\
@@ -76,9 +65,10 @@ Aus diesem Grund besteht das Risiko, dass die Kosten einer Anwendung von
 Predictive Analytics den Nutzen übersteigen. Es ist auch möglich, dass das
 gleiche Ergebnis mit einer einfacheren, kostengünstigeren Methode erreicht
 werden kann. In diesem Fall würde die Anwendung eines aufwändigen Predictive
-Analytics Verfahrens wertvolle Ressourcen binden, die an anderer Stelle mehr
+Analytics Verfahrens wertvolle Ressourcen binden, die an anderer Stelle stärker
 gebraucht werden. \\ \\
-Somit ist es wichtig, Betrachtungen zu Alternativkosten \todo{gls eintrag} in die 
+Somit ist es wichtig, Betrachtungen zu Alternativkosten \todo{gls eintrag}
+in die 
 Planung von Predictive Analytics Anwendungen einzubeziehen. 
 
 \subsection{Risiken bei der Datenerhebung}
@@ -89,8 +79,19 @@ Planung von Predictive Analytics Anwendungen einzubeziehen.
 
 \subsection{Risiken bei der Interpretation der Ergebnisse}
 
+Wenn die Ergebnisse der Datenanalyse zur Entscheidungsunterstützung herangezogen
+werden, beeinflussen sie das Verhalten der Entscheidungsträger. Dies kann zur
+Entstehung problematischer psychosozialer Effekte führen. Zwei Beispiele hierfür
+werden nun erläutert.
+
 \subsubsection{Prognose verändert das Verhalten des Systems 
 %  (``Selffulfilling Prophecy'')}
   (\glqq{Selffulfilling} Prophecy\grqq)}
 
 \subsubsection{Ignorieren der Unsicherheiten bei der Prognose}
+
+Es besteht die Gefahr, dass die Unsicherheiten von Vorhersagen ignoriert werden
+und die Prognose als eine Gewissheit betrachtet wird. Somit wird möglichen,
+alternativen Entwicklungen bei der Entscheidungsfindung nicht genügend Bedeutung
+beigemessen. Dies kann dazu führen, dass Risiken falsch kalkuliert werden und
+in der Zukunft nicht genügend Handlungsoptionen zur Verfügung stehen.
