--- a/Text/Arbeit/Bibliographie/Bibli.bib
+++ b/Text/Arbeit/Bibliographie/Bibli.bib
@@ -104,3 +104,13 @@ year = {2015},
 isbn = {978-1-118-96175-9},
 language = {english}
 }
+
+@book{Arens,
+author = {Arens, Thilo and Hettlich, Frank and Karpfinger, Christian and
+  Kockelkorn, Ulrich and Lichtenegger, Klaus and Stachel, Hellmuth},
+title = {Mathematik},
+publisher = {Spektrum},
+year = {2013},
+isbn = {978-3-8274-2347-4},
+language = {ngerman}
+}
