--- a/Text/Arbeit/Glossar/Arbeit_Glossar.tex
+++ b/Text/Arbeit/Glossar/Arbeit_Glossar.tex
@@ -18,6 +18,7 @@
 %\newacronym{CD}{CD}{Compact Disc}
 %Eine Akronym mit Glossareintrag
 %\newacronym{AD}{AD}{Active Directory\protect\glsadd{glos:AD}}
+\newacronym{PCA}{PCA}{Primary Component Analysis\protect\glsadd{glos:PCA}}
 
 %Glossareinträge
 %\newglossaryentry{glos:AD}{
@@ -30,7 +31,14 @@
 Installieren einer Anwendung oder des Betriebssystems.}}
 
 \newglossaryentry
-{glos:Predictive_Analytics}{name=Predictive Analytics, description=
+{glos:Predictive_Analytics}{name=Predictive analytics, description=
 {Die Analyse von Daten mit Hilfe mathematischer und statistischer Methoden.
 Das Ziel von Predictive Analytics ist die Erstellung von Prognosen zur
-Unterstützung der Entscheidungsfindung}}
+Unterstützung der Entscheidungsfindung}
+}
+
+\newglossaryentry
+{glos:PCA}{name=Primary component analysis, description=
+{Eine Methode zur Variablenreduktion. Dabei wird ein neuer Satz von
+Basisvektoren berechnet, der die Varianz der Daten am Besten beschreibt}
+}
