--- a/Text/Arbeit/Inhalt/Konzepte_PA.tex
+++ b/Text/Arbeit/Inhalt/Konzepte_PA.tex
@@ -3,7 +3,16 @@
 
 \section{Begriffsdefinition und -Abgrenzung}
 
-\section{Bestandteile von Predictive Analytics}
+\section{Bestandteile von \emph{predictive analytics}}
+
+Bei \emph{predictive analytics} werden Daten mit Hilfe von geeigneten Methoden
+verarbeitet, um verschiedene Arten von Prognosen zu ermöglichen. Dem
+Datenanalysten stehen für diese Aufgabe Computeranwendungen zur Verfügung.
+Diese Programme lesen die Daten ein, führen die notwendigen Berechnungen aus und
+ermöglichen eine graphische Aufbereitung der Ergebnisse. \\ \\
+Standardisierte
+Vorgehensmodelle können helfen, die Arbeitsschritte einer Datenanalyse zu
+vereinheitlichen. Ein Beispiel für ein solches Vorgehensmodell ist CRISP-DM \xcom.
 
 \subsection{CRISP-DM Vorgehensmodell}
 
@@ -68,8 +77,7 @@ werden kann. In diesem Fall würde die Anwendung eines aufwändigen Predictive
 Analytics Verfahrens wertvolle Ressourcen binden, die an anderer Stelle stärker
 gebraucht werden. \\ \\
 Somit ist es wichtig, Betrachtungen zu Alternativkosten \todo{gls eintrag}
-in die 
-Planung von Predictive Analytics Anwendungen einzubeziehen. 
+in die Planung von \emph{predictive analytics} Anwendungen einzubeziehen. 
 
 \subsection{Risiken bei der Datenerhebung}
 
@@ -84,9 +92,17 @@ werden, beeinflussen sie das Verhalten der Entscheidungsträger. Dies kann zur
 Entstehung problematischer psychosozialer Effekte führen. Zwei Beispiele hierfür
 werden nun erläutert.
 
-\subsubsection{Prognose verändert das Verhalten des Systems 
-%  (``Selffulfilling Prophecy'')}
-  (\glqq{Selffulfilling} Prophecy\grqq)}
+\subsubsection{Prognose verändert das Verhalten des Systems }
+
+Die Ergebnisse von Vorhersagen werden von Menschen interpretiert,
+die daraufhin ihr Verhalten anpassen. Dies kann zu Rückkopplungseffekten führen,
+die von negativen Auswirkungen im Sinne einer
+\glqq{Selffulfilling} Prophecy\grqq begleitet werden können
+(vgl. \cite{Crossman}). Bestimmte Prognosen können beispielsweise von einer 
+Interessengruppe als Bestätigung ihrer Agenda interpretiert werden, wobei
+anderslautende Vorhersagen ignoriert werden. Dadurch bestärkt, setzt die Gruppe
+ihre gewünschten Handlungsoptionen um. Dies ruft den vorhergesagten Effekt
+jedoch erst hervor.
 
 \subsubsection{Ignorieren der Unsicherheiten bei der Prognose}
 
