--- a/Text/Arbeit/Inhalt/Einleitung.tex
+++ b/Text/Arbeit/Inhalt/Einleitung.tex
@@ -1,13 +1,17 @@
-\chapter{Einleitung - Die Schwierigkeit von Vorhersagen}
+\chapter{Einleitung}
 
 In dieser Arbeit soll die Anwendung von Datenanalysen und insbesondere
 von \gls{glos:Predictive_Analytics} im öffentlichen Sektor untersucht werden.
 Der Schwerpunkt liegt dabei auf Deutschland, wobei aber auch relevante
 Anwendungsgebiete in anderen Staaten betrachtet werden. \\ \\
-Dieser einleitende Teil soll zunächst das Problem der Schwierigkeit von
+Der einleitende Teil~\ref{part:Schw_Vorhersagen} soll zunächst das Problem der
+Schwierigkeit von
 Prognosen untersuchen und damit eine Motivation für die Anwendung von Predictive
 Analytics liefern. \\ \\
 In Teil~\ref{part:Konzepte_PA} werden die wichtigsten Konzepte von Predictive
 Analytics vorgestellt. Dabei werden auch die allgemeinen Risiken bei der
 Anwendung von Predictive Analytics diskutiert. \\ \\
-\todo{weitere Teile}
+\misobj{weitere Teile}
+
+\chapter{Die Schwierigkeit von Vorhersagen}
+\label{part:Schw_Vorhersagen}
