--- a/Text/Arbeit/Glossar/Arbeit_Glossar.tex
+++ b/Text/Arbeit/Glossar/Arbeit_Glossar.tex
@@ -31,7 +31,7 @@
 Installieren einer Anwendung oder des Betriebssystems.}}
 
 \newglossaryentry
-{glos:Predictive_Analytics}{name=Predictive analytics, description=
+{glos:Predictive_Analytics}{name=predictive analytics, description=
 {Die Analyse von Daten mit Hilfe mathematischer und statistischer Methoden.
 Das Ziel von Predictive Analytics ist die Erstellung von Prognosen zur
 Unterstützung der Entscheidungsfindung}
