--- a/Text/Arbeit/Inhalt/Konzepte_PA.tex
+++ b/Text/Arbeit/Inhalt/Konzepte_PA.tex
@@ -18,10 +18,11 @@ vereinheitlichen. Ein Beispiel für ein solches Vorgehensmodell ist CRISP-DM \xc
 
 \subsection{Daten}
 
-\subsubsection{Datentypen}
+\subsubsection{Elementare Datentypen}
 
-Bei Daten lassen sich verschiedene Typen\footnote{Auch als Skalen
-(\emph{scales of measurement}) bezeichnet} unterscheiden.
+Bei Daten lassen sich verschiedene elementare Typen\footnote{Alternativ dazu
+spricht man von verschiedenen Skalen (\emph{scales of measurement}) auf denen
+Daten definiert werden.} unterscheiden.
 Je nach Datentyp einer
 Variablen, werden ihre Werte unterschiedlich interpretiert. Zudem können
 bestimmte mathematische Operationen nur mit Variablen eines bestimmten Typs
@@ -30,14 +31,14 @@ durchgeführt werden. Die Datentypen werden im folgenden Text genauer erläutert
 Der \glqq{einfachste}\grqq Datentyp ist eine nominal skalierte Variable. 
 Werte von nominal skalierten Variablen werden als Namen
 interpretiert. Weiterhin ist es nicht sinnvoll diese Art von Variablen zu
-ordnen. Es lässt sich lediglich feststellen, ob zwei nominal skalierte Variablen
+ordnen. Es lässt sich lediglich feststellen, ob zwei Variablen
 gleich oder ungleich sind. Ein Beispiel für eine nominal skalierte Variable ist
 der Name einer Stadt. Die Werte sind dann konkrete Städtenamen wie
 \glqq{München}\grqq oder \glqq{Berlin}\grqq. Als Operationen stehen nur $=$
 oder $\neq$ zur Verfügung, weil Aussagen wie 
 \glqq{München}\grqq$=$\glqq{München}\grqq oder
 \glqq{München}\grqq$\neq$\glqq{Berlin}\grqq sinnvoll sind. Nicht sinnvoll wären
-dagegegen Vergleiche wie \glqq{München}\grqq$<$\glqq{Berlin}\grqq
+dagegen Vergleiche wie \glqq{München}\grqq$<$\glqq{Berlin}\grqq
 \footnote{Der Vergleich wäre sinnvoll, wenn mit der Nennung des Namens 
 z. B. implizit die Größe der Stadt gemeint wäre. Dies ist hier aber nicht der
 Fall.}.
