--- a/Text/Arbeit/Inhalt/Einleitung.tex
+++ b/Text/Arbeit/Inhalt/Einleitung.tex
@@ -1,17 +1,25 @@
 \chapter{Einleitung}
 
 In dieser Arbeit soll die Anwendung von Datenanalysen und insbesondere
-von \gls{glos:Predictive_Analytics} im öffentlichen Sektor untersucht werden.
+von \emph{\gls{glos:Predictive_Analytics}} im öffentlichen Sektor untersucht
+werden.
 Der Schwerpunkt liegt dabei auf Deutschland, wobei aber auch relevante
 Anwendungsgebiete in anderen Staaten betrachtet werden. \\ \\
 Der einleitende Teil~\ref{part:Schw_Vorhersagen} soll zunächst das Problem der
 Schwierigkeit von
-Prognosen untersuchen und damit eine Motivation für die Anwendung von Predictive
-Analytics liefern. \\ \\
-In Teil~\ref{part:Konzepte_PA} werden die wichtigsten Konzepte von Predictive
-Analytics vorgestellt. Dabei werden auch die allgemeinen Risiken bei der
-Anwendung von Predictive Analytics diskutiert. \\ \\
+Prognosen untersuchen und damit eine Motivation für die Anwendung von 
+\emph{predictive analytics} liefern. \\ \\
+In Teil~\ref{part:Konzepte_PA} werden die wichtigsten Konzepte von
+\emph{predictive analytics} vorgestellt. Dabei werden auch die allgemeinen
+Risiken bei der Anwendung diskutiert. \\ \\
 \misobj{weitere Teile}
 
 \chapter{Die Schwierigkeit von Vorhersagen}
 \label{part:Schw_Vorhersagen}
+
+Dies könnte
+\begin{itemize}
+\item[a)] notwendiger sein als erwartet und
+\item[b)] schwieriger werden als gedacht
+\end{itemize}
+Denn ...
