Ausformulierung Tetlock begonnen

--- a/Text/Arbeit/Bibliographie/Bibli.bib
+++ b/Text/Arbeit/Bibliographie/Bibli.bib
@@ -114,3 +114,12 @@ year = {2013},
 isbn = {978-3-8274-2347-4},
 language = {ngerman}
 }
+
+@book{Tetlock,
+author = {Tetlock, Philip},
+title = {Expert Political Judgment - How good is it? How can we know?},
+publisher = {Princeton University Press},
+year = {2005},
+isbn = {978-0-691-12871-9},
+language = {english}
+}
