--- a/Text/Arbeit/Inhalt/Konzepte_PA.tex
+++ b/Text/Arbeit/Inhalt/Konzepte_PA.tex
@@ -147,6 +147,8 @@ in die Planung von \emph{predictive analytics} Anwendungen einzubeziehen.
 
 \subsection{Risiken bei der Datenerhebung}
 
+Trainingsdaten spiegeln nicht (mehr) das Verhalten des Systems wider.
+
 \subsubsection{\ldots}
 
 \subsection{Risiken bei der Interpretation der Daten}
