Tetlock: Erste Grafik hinzugefügt

--- a/Text/Arbeit/Inhalt/Einleitung.tex
+++ b/Text/Arbeit/Inhalt/Einleitung.tex
@@ -28,8 +28,8 @@ Dies könnte
 \item[(a)] notwendiger sein als erwartet und
 \item[(b)] schwieriger werden als gedacht.
 \end{description}
-Denn eine ausführliche Studie von Tetlock aus dem Jahr 2005 (siehe
-\cite{Tetlock}) ergab,
+Denn eine ausführliche Studie des Psychologen \xcom Tetlock aus dem Jahr 2005
+(siehe \cite{Tetlock}) ergab,
 dass Experten zu politischen Fragen keine besseren Prognosen liefern konnten,
 als die einfachsten statistischen Algorithmen. Zudem hatten die Experten
 große Schwierigkeiten damit, ihre Prognosen angesichts schlechter Resultate
@@ -49,8 +49,15 @@ Zur Messung der Genauigkeit der Vorhersagen wurde eine Maßzahl,
 der \emph{probability score} verwendet. Dabei wurden ihre Vorhersagen mit den
 Ergebnissen von einfachen und erweiterten statistischen Algorithmen
 verglichen. \\ \\
-Das Ergebnis ist in Abbildung~\xcom dargestellt und wird im folgenden Text
-ausführlich erläutert. \\ \\
+Das Ergebnis ist in Abbildung~\ref{pic:Tetlock_1} dargestellt und wird im
+folgenden Text ausführlich erläutert. \\ \\
+\begin{figure}%[!hbt]
+\centering
+\caption{ Bei den \emph{forecasting exercises} erzielte Wertungen 
+  (Grafik leicht abgewandelt vom Original aus \cite{Tetlock}, S. 51). }
+\includegraphics[scale=1.0]{Grafiken/Tetlock_1_Fertig_Ink.pdf} 
+\label{pic:Tetlock_1}
+\end{figure}
 Die zwei
 Bestandteile des \emph{probability score}, Kalibrierung (\emph{calibration}) und
 Diskriminierung (\emph{discrimination}), sind auf den Achsen abgebildet. \\ \\ 
@@ -93,7 +100,7 @@ Die Gruppe mit der geringsten Qualifikation waren Studenten, die die Übungen
 zu Vorhersagen absolvieren mussten, nachdem sie kurze Zusammenfassungen von
 Fakten zu den jeweiligen Themen erhalten haben (vgl. \cite{Tetlock}, S.~56).
 \\ \\
-Schließlich enthält Abbildung~\xcom auch die Ergebnisse, die von den
+Weiterhin enthält Abbildung~\xcom auch die Ergebnisse, die von den
 statistischen Algorithmen erzielt wurden. Zur besseren Übersicht werden die
 Algorithmen hier in vier Gruppen eingeteilt. Der Stufe 0 Algorithmus würfelt
 einfach die Antworten , er ordnet den zur Debatte stehenden Ereignissen
@@ -115,4 +122,7 @@ sieht folgendermaßen aus:
   \emph{aggressive case-specific extrapolation} (2-2)
 \item[Stufe 3:] \emph{autoregressive distributed lag models}
 \end{description}
-}
+} \\ \\
+Nun können die Ergebnisse der Abbildung~\xcom interpretiert werden.
+
+Diese zeigen, dass Experten ...
